[tool.poetry]
name = "restables"
version = "0.1.0"
description = "Database table micro-service with column select, limiting and ordering"
authors = ["James <jseconners@gmail.com>"]
license = "mIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
sqlalchemy = "^1.3.12"
pyaml = "^19.12.0"
PyMySQL = "^0.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
