[tool.poetry]
name = "tdvr-python"
version = "0.1.0"
description = "REST microservice for relational DB table data viewing"
authors = ["James <jseconners@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
sqlalchemy = "^1.3.12"
pyaml = "^19.12.0"
PyMySQL = "^0.9.3"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
